add more run instructions